add food property
