# docs/swagger.json
@@ -175,9 +175,9 @@
                     "type": "string",
                     "example": "meat"
                 },
-                "create_at": {
-                    "type": "string",
-                    "example": "2021/11/20 15:30:42"
+                "created_at": {
+                    "type": "integer",
+                    "example": 1636864591642
                 },
                 "food_id": {
                     "type": "integer",
@@ -190,6 +190,10 @@
                 "is_eaten": {
                     "type": "boolean",
                     "example": false
+                },
+                "life": {
+                    "type": "integer",
+                    "example": 20
                 },
                 "name": {
                     "type": "string",
@@ -214,6 +218,10 @@
                 "shelf_life": {
                     "type": "integer",
                     "example": 30
+                },
+                "src": {
+                    "type": "string",
+                    "example": "http://imageurl"
                 }
             }
         },
@@ -232,6 +240,10 @@
                     "type": "string",
                     "example": "Pork"
                 },
+                "shelf_life": {
+                    "type": "integer",
+                    "example": 30
+                },
                 "src": {
                     "type": "string",
                     "example": "http://imageurl"
@@ -241,9 +253,9 @@
         "models.Seasoning": {
             "type": "object",
             "properties": {
-                "create_at": {
-                    "type": "string",
-                    "example": "2021/11/20 15:30:42"
+                "created_at": {
+                    "type": "integer",
+                    "example": 1636864591642
                 },
                 "id": {
                     "type": "integer",
@@ -272,6 +284,10 @@
                 "seasoning_id": {
                     "type": "integer",
                     "example": 15
+                },
+                "src": {
+                    "type": "string",
+                    "example": "http://imageurl"
                 }
             }
         },
